<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coforcemed.carss_controller.MainActivity">
    <item
        android:id="@+id/action_setUserClass"
        android:orderInCategory="100"
        android:title="@string/action_setUserClass"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_selectAdmin"
                android:title="@string/action_selectAdmin"/>
            <item
                android:id="@+id/action_selectClinician"
                android:title="@string/action_selectClinician"/>
            <item
                android:id="@+id/action_selectPatient"
                android:title="@string/action_selectPatient"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_selectDVT"
        android:orderInCategory="100"
        android:title="@string/action_selectDVT"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_checkBond"
        android:orderInCategory="100"
        android:title="@string/action_checkBond"
        app:showAsAction="never">
    </item>
</menu>